--- a/.env
+++ b/.env
@@ -12,11 +12,12 @@ ENCRYPTION_KEY=EDa4XWfXzBbgIMC7TccrXA==
 
 # Database
 #DATABASE_CLIENT=mysql2
-DATABASE_HOST=127.0.0.1
+DATABASE_CLIENT=mysql
+DATABASE_HOST=mysql1.panacea-soft.co
 DATABASE_PORT=3306
-DATABASE_NAME=strapi_ai
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=root
+DATABASE_NAME=news4mm       # or your actual DB name on DreamHost
+DATABASE_USERNAME=psmysql1
+DATABASE_PASSWORD=psuser@2017
 DATABASE_SSL=false
 #DATABASE_FILENAME=.tmp/data.db
 JWT_SECRET=niTmsLRGBvSStcdnzF/0dg==
